src/main/org.kien/chapter05/external-service-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-name-service
spec:
  type: ExternalName
  externalName: google.com
  ports:
    - port: 443
