src/main/org.kien/chapter05/kubia-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport
spec:
  type: NodePort
  ports:
    - port: 9090
      targetPort: 8080
      nodePort: 30123
  selector:
    app: kubia
