src/main/org.kien/chapter05/kubia-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  sessionAffinity: ClientIP # Make every request with the same IP Address forwarded to the same pod.
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: kubia
